ingress/traefik-ingress/traefik-ds.yaml
---
kind: DaemonSet
apiVersion: apps/v1 
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    matchLabels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
     # volumes:
     # - name: config
     #   configMap:
     #      name: traefik-conf
     # - name: rbac
     #   secret: 
     #      secretName: zsmf-demo
      containers:
      - image: traefik:v2.2
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
          hostPort: 81
        - name: https
          containerPort: 443
          hostPort: 444
        - name: admin
          containerPort: 8080
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args: #这里都是global参数，对于所有的ingress都生效
        - --providers.kubernetesingress
        - --entrypoints.http.Address=:80
        - --entrypoints.http.http.redirections.entryPoint.to=https
        - --entrypoints.https.Address=:443
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 8080
      name: admin
